add discord rpc support

--- a/osu.env
+++ b/osu.env
@@ -2,3 +2,4 @@
 # See https://blog.thepoon.fr/osuLinuxAudioLatency/#results-of-my-progress for more information about tweaking these values
 export STAGING_AUDIO_PERIOD=50000
 export STAGING_AUDIO_DURATION=$(($STAGING_AUDIO_PERIOD * 3))
+export ENABLE_DISCORD_RPC=true
